edit the html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, This new branch</h1>
+    <h1>Hello, This an updateded branch</h1>
 </body>
 <script src="app.js">
 
